// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav Esempio 1`] = `
<div>
  <ul
    class="thumb-nav"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioAutoWidth 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-auto thumb-nav-auto-3"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 4"
          src="https://picsum.photos/480/320?image=1040"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 5"
          src="https://picsum.photos/480/320?image=1055"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 6"
          src="https://picsum.photos/480/320?image=1057"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioAutoWidthFive 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-auto thumb-nav-auto-5"
  />
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioBlackLayer 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-black"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioFixed 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-fixed"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 4"
          src="https://picsum.photos/480/320?image=1040"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 5"
          src="https://picsum.photos/480/320?image=1055"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 6"
          src="https://picsum.photos/480/320?image=1057"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioNoZoom 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-nozoom"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioPrimaryLayer 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-primary"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioSmall 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-small"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav EsempioVerticale 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-vertical"
  >
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 1"
          src="https://picsum.photos/480/320?image=1044"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 2"
          src="https://picsum.photos/480/320?image=1050"
        />
      </a>
    </li>
    <li>
      <img
        alt=""
        aria-hidden="true"
        class="thumb-nav-resizer"
        src="https://picsum.photos/240/160?image=1056"
      />
      <a
        class="ratio ratio-3x2"
        href="#"
      >
        <img
          alt="Visualizza immagine 3"
          src="https://picsum.photos/480/320?image=1037"
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav Overlay 1`] = `
<div>
  <div
    class="position-relative"
  >
    <img
      alt="Amazing landscape"
      class="test-image"
      src="https://picsum.photos/1280/720?image=1050"
    />
    <ul
      class="thumb-nav thumb-nav-small thumb-nav-bottom"
    >
      <li>
        <img
          alt=""
          aria-hidden="true"
          class="thumb-nav-resizer"
          src="https://picsum.photos/240/160?image=1056"
        />
        <a
          class="ratio ratio-3x2"
          href="#"
        >
          <img
            alt="Visualizza immagine 1"
            src="https://picsum.photos/480/320?image=1044"
          />
        </a>
      </li>
      <li>
        <img
          alt=""
          aria-hidden="true"
          class="thumb-nav-resizer"
          src="https://picsum.photos/240/160?image=1056"
        />
        <a
          class="active ratio ratio-3x2"
          href="#"
        >
          <img
            alt="Visualizza immagine 2"
            src="https://picsum.photos/480/320?image=1050"
          />
        </a>
      </li>
      <li>
        <img
          alt=""
          aria-hidden="true"
          class="thumb-nav-resizer"
          src="https://picsum.photos/240/160?image=1056"
        />
        <a
          class="ratio ratio-3x2"
          href="#"
        >
          <img
            alt="Visualizza immagine 3"
            src="https://picsum.photos/480/320?image=1037"
          />
        </a>
      </li>
      <li>
        <img
          alt=""
          aria-hidden="true"
          class="thumb-nav-resizer"
          src="https://picsum.photos/240/160?image=1056"
        />
        <a
          class="ratio ratio-3x2"
          href="#"
        >
          <img
            alt="Visualizza immagine 4"
            src="https://picsum.photos/480/320?image=1040"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav OverlayLeft 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-vertical thumb-nav-left"
  />
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav OverlayRight 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-vertical thumb-nav-right"
  />
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/ThumbNav OverlayTop 1`] = `
<div>
  <ul
    class="thumb-nav thumb-nav-top"
  />
</div>
`;
